--- a/css/_var.scss
+++ b/css/_var.scss
@@ -23,5 +23,5 @@ $body-size: 16px;
 $family: 'Rubik', sans-serif;
 
 //break point
-$small-screen: '(max-width: 400px)';
+$small-screen: '(min-width: 768px)';
 $mobile: '(max-width: 767px)';
