--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,20 +1,61 @@
 header {
-    padding: 30px 50px;
+    position: relative;
     display: flex;
     justify-content: space-between;
-    .open {
-        display: none;
-        cursor: pointer;
-    }
-    nav {
-        .close {
-            display: none;
+    align-items: center;
+    @media #{$small-screen} {
+        padding: 30px 50px;
+        nav {
+            display: flex !important;
+            justify-content: space-between;
+            align-items: center;
+            width: calc(100% - 200px);
+            ul {
+                display: flex;
+                li {
+                    margin-right: 20px;
+                }
+            }
+        }
+        .open {
+            display: none !important;
             cursor: pointer;
         }
+    }
+    @media #{$mobile} {
+        nav {
+            width: 95%;
+            position: absolute;
+            top: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, .6);
+            border-radius: 4px;
+            ul {
+                border: 1px solid rgba(0, 0, 0, .6);
+                padding: 20px;
+                background-color: $white;
+                text-align: center;
+                border-radius: 4px;
+                li {
+                    margin-bottom: 20px;
+                    text-align: center;
+                    a {
+                        display: block;
+                        width: 100%;
+                    }
+                }
+            }
+            .start {
+                display: none;
+            }
+        }
+    }
+    padding: 20px 20px;
+    nav {
+        display: none;
         ul {
-            display: flex;
             li {
-                margin-right: 10px;
                 a {
                     font-size: .9em;
                     color: $title-color;
@@ -27,53 +68,11 @@ header {
             }
         }
     }
-    @media #{$small-screen} {
-        padding-left: 15px;
-        padding-right: 15px;
+    .open {
+        cursor: pointer;
     }
-    @media #{$mobile} {
-        .open {
-            display: block;
-        }
-        nav {
-            display: none;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: rgba(0, 0, 0, .4);
-            .close {
-                display: block !important;
-                position: absolute;
-                right: 53px;
-                top: 30px;
-            }
-            ul {
-                display: block !important;
-                max-width: 300px;
-                padding: 30px;
-                position: absolute;
-                top: 80px;
-                left: 50%;
-                transform: translateX(-50%);
-                background-color: $white;
-                width: 100%;
-                text-align: center;
-                border-radius: 4px;
-                li {
-                    margin-right: 0;
-                    margin-bottom: 20px;
-                    text-align: center;
-                    a {
-                        display: block;
-                        width: 100%;
-                    }
-                }
-            }
-        }
-        .start {
-            display: none;
-        }
+    .close {
+        display: none;
+        cursor: pointer;
     }
 }
